# optiepub

./: .editorconfig  .gitignore  CODEOWNERS  Cargo.toml  README.md  deny.toml  flake.nix  justfile  rustfmt.toml
.github/workflows/: clippy.yaml  machete.yaml  test.yaml
optiepub/: Cargo.toml
optiepub/src/: lib.rs  main.rs
