# https://doc.rust-lang.org/cargo/reference/workspaces.html#the-members-and-exclude-fields
[workspace]
resolver = "2"
members = [
    "optiepub",
]
default-members = ["optiepub"]

[workspace.lints.rust]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[profile.bloat]
inherits = "dev"
opt-level = 3
lto = false
debug = 1

[profile.dev]
#panic = "abort"
#strip = true
opt-level = 3
lto = "thin"
debug = 1

[profile.release]
opt-level = 3
# https://github.com/rust-lang/cargo/issues/11275
# "panic_immediate_abort"
# rustflags = ["-Z", "build-std-features=panic_immediate_abort"]
panic = "abort"
strip = true
lto = "fat"
incremental = false
codegen-units = 1
