[package]
name = "optiepub"
version = "0.0.1"
authors = ["Luna Nova <cratesio@lunnova.dev>"]
edition = "2021"
description = "A tool for optimizing EPUB files by compressing images and removing unnecessary content"
license = "AGPL-3.0"
repository = "https://github.com/LunNova/optiepub"
keywords = ["epub", "ebook", "optimization", "compression", "images"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"

[lib]
path = "lib.rs"

[[bin]]
name = "optiepub"
path = "main.rs"

[lints]
workspace = true

[dependencies]
zip = "2.1"
eyre = "0.6"
oxipng = { version = "9.1", default-features = false, features = ["zopfli"] }
regex = "1.10"
image = "0.25"
mozjpeg = "0.10"
imageproc = "0.25"
image_hasher = "3.0"
argh = "0.1"
indicatif = "0.17"
env_logger = "0.11"
log = "0.4"
enum_dispatch = "0.3"

[dev-dependencies]
tempfile = "3.10"
